--- a/css/viewport.css
+++ b/css/viewport.css
@@ -38,7 +38,11 @@
         }
 
         .cont-s3 .card-type-2 .row-card .p-cont {
-            width: 60%;
+            width: 66%;
+        }
+
+        .img-cont {
+            width: 31%;
         }
     /* Third section */
 
@@ -87,12 +91,16 @@
 /* Desktop */
 @media screen and (min-width: 992px) {
     /* Nav */    
-        .hamburger {
-            display: none;
-        }
-
         .menu {
             display: flex;
+        }
+
+        .nav-menu {
+            width: 57%;
+        }
+
+        .cont-pop-up {
+            display: none;
         }
     /* Nav */    
     
@@ -134,6 +142,16 @@
         }
     /* Second section */
 
+    /* Third section */
+        .cont-s3 .card-type-2 .row-card .p-cont {
+            width: 70%;
+        }
+
+        .img-cont {
+            width: 27%;
+        }
+    /* Third section */
+
     /* Fourth section */
         .cont-s4 .card-50 {
             width: 32%;
@@ -153,4 +171,16 @@
     .row {
         width: 70%;
     }
+
+    
+
+    /* Third section */
+        .cont-s3 .card-type-2 .row-card .p-cont {
+            width: 70%;
+        }
+
+        .img-cont {
+            width: 27%;
+        }
+    /* Third section */
 }
